Fix link do my website and update footer style

--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,10 @@ img {
   text-align: center;
   color: white;
 }
-
+.footer p a {
+  color: #122ab2;
+  cursor: pointer;
+}
 @media (max-width: 600px) {
   .footer p {
     font-size: 1.25em;
